correção redirect site do cliente.

--- a/easyhumanresouce/src/main/resources/templates/systempages/panel.html
+++ b/easyhumanresouce/src/main/resources/templates/systempages/panel.html
@@ -11,10 +11,8 @@
 	<h2>Recursos</h2>
 	
 	<form action="">
-		<p>Adicionar Novos Usuarios:</p>
-		<p>E-mail:<input type="text"/></p>
-		<p><input type="submit"/></p>
-		
+		<p><h3>Adicionar Novos Usuarios:</h3></p>
+		<p>E-mail:<input type="text"/><input type="submit"/></p>
 	</form>
 
 
