--- a/easyhumanresouce/src/main/resources/templates/signinsite.html
+++ b/easyhumanresouce/src/main/resources/templates/signinsite.html
@@ -7,10 +7,12 @@
 <body>
 	<h1>Easy human resource management</h1>
 	<form action="#" th:action="@{/signinsite}" th:object="${signInVO}" method="post" >
-		<p>Nome do Site de Sua Empresa: www. <input type="text" th:field="*{siteName}"/> ... </p>
-		<p>Usuario: <input type="text" th:field="*{userName}"/></p>
-		<p>Senha: <input type="text" th:field="*{password}"/></p>
-		<p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+		<p> Crie o perfil de sua empresa de forma simples e rápida</p>
+		<p>Digite o nome do site de sua empresa: www. <input type="text" th:field="*{siteName}"/> ... </p>
+		<p> Adicione pelo menos uma conta, ela será o usuário principal do sistema ;).
+		<p>E-mail: <input type="text" th:field="*{userName}"/></p>
+		<p>Senha: <input type="password" th:field="*{password}"/></p>
+		<p><input type="submit" value="Começar a utilizar o sistema"/> <input type="reset" value="Cancelar"/></p>
 	</form>
 	
 </body>
