--- a/easyhumanresouce/src/main/resources/templates/systempages/panel.html
+++ b/easyhumanresouce/src/main/resources/templates/systempages/panel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html http://www.thymeleaf.org>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8"></meta>
 <title>Insert title here</title>
 </head>
 <body>
